--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "gsap": "./gsap-bonus.tgz",
         "postcss": "^8.4.20",
         "prettier": "2.8.1",
+        "swiper": "^11.1.4",
         "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     }
